--- a/config
+++ b/config
@@ -1,15 +1,5 @@
-#!/bin/bash
-export SYSTEM_DISABLE_SELINUX=0
-export SYSTEM_FAST_SHUTDOWN=0
-
-export KDE_PREFER_HOTCORNER=0
-export KDE_DOUBLE_CLICK=0
-export KDE_SHUTDOWN_DIRECTLY=0
-export KDE_OPTIMIZE_APPEARANCE=0
-export KDE_OPTIMIZE_KWRITE=0
-
-export DNF_LOCK_KERNEL=0
-export DNF_ADD_TLP=0
-export DNF_ADD_TIMESHIFT=0
-export DNF_ADD_VIRT=0
-export DNF_DROP_LIBREOFFICE=0
+export PREFER_HOTCORNER=1
+export DOUBLE_CLICK=1
+export SHUTDOWN_DIRECTLY=1
+export OPTIMIZE_APPEARANCE=1
+export OPTIMIZE_KWRITE=1
